--- a/apps/jellyfin/docker-compose.yml
+++ b/apps/jellyfin/docker-compose.yml
@@ -41,7 +41,7 @@ services:
         - traefik.http.services.jellyfin-refresh.loadbalancer.server.port=8096
 
   jellyfin-backup:
-    image: alpinelinux/docker-cli@sha256:904765aefc655b9618fcdb49f2b8df2e36c87dfeb04217de80ca1307e8e6f732
+    image: docker:27.3.1-cli-alpine3.20
     entrypoint: "sh -c"
     command: |
       '
