--- a/apps/paperless/docker-compose.yml
+++ b/apps/paperless/docker-compose.yml
@@ -25,17 +25,30 @@ services:
       - paperless-export:/usr/src/paperless/export
       - paperless-import:/usr/src/paperless/consume
     environment:
+      # Database
       PAPERLESS_DBHOST: postgres
       PAPERLESS_DBNAME: paperless
       PAPERLESS_DBUSER: paperless
       PAPERLESS_DBPASS_FILE: /run/secrets/paperless-postgres-password
-      PAPERLESS_SECRET_KEY_FILE: /run/secrets/paperless-secret-key
+      # Redis
       PAPERLESS_REDIS: redis://valkey:6379/3
       PAPERLESS_REDIS_PREFIX: paperless
+      # Office parsing
       PAPERLESS_TIKA_ENABLED: 1
       PAPERLESS_TIKA_ENDPOINT: http://paperless-tika:9998
       PAPERLESS_TIKA_GOTENBERG_ENDPOINT: http://paperless-gotenberg:3000
+
+      # Cookies
+      PAPERLESS_SECRET_KEY_FILE: /run/secrets/paperless-secret-key
+
+      # Proxy
       PAPERLESS_URL: https://paperless.lab.omglolwtfbbq.com
+
+      # SSO
+      PAPERLESS_DISABLE_REGULAR_LOGIN: 'True'
+      PAPERLESS_APPS: allauth.socialaccount.providers.openid_connect
+      # This has to be configured manually after app setup. There is no available automation.
+      # PAPERLESS_SOCIALACCOUNT_PROVIDERS:
     deploy:
       placement:
         constraints:
