--- a/stacks/traefik/traefik.yaml
+++ b/stacks/traefik/traefik.yaml
@@ -8,6 +8,7 @@ providers:
   swarm:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
+    network: web-proxy
   file:
     directory: /etc/traefik/config
     watch: true
