--- a/apps/influxdb/docker-compose.yml
+++ b/apps/influxdb/docker-compose.yml
@@ -1,9 +1,18 @@
 version: '3.8'
 
+networks:
+  lab_default:
+    external: true
+  web-proxy:
+    external: true
+
 services:
 
   influxdb:
     image: influxdb:2.7.12-alpine
+    networks:
+      - lab_default
+      - web-proxy
     environment:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME_FILE: /run/secrets/influxdb-admin-username
