--- a/apps/airgradient/docker-compose.yml
+++ b/apps/airgradient/docker-compose.yml
@@ -1,9 +1,18 @@
 version: '3.8'
 
+networks:
+  lab_default:
+    external: true
+  web-proxy:
+    external: true
+
 services:
 
   airgradient:
     image: ghcr.io/jeremyhayes/airgradient-local:v0.2.5
+    networks:
+      - lab_default
+      - web-proxy
     deploy:
       placement:
         constraints:
