--- a/apps/grafana/docker-compose.yml
+++ b/apps/grafana/docker-compose.yml
@@ -1,9 +1,18 @@
 version: '3.8'
 
+networks:
+  lab_default:
+    external: true
+  web-proxy:
+    external: true
+
 services:
 
   grafana:
     image: grafana/grafana:12.2.1
+    networks:
+      - lab_default
+      - web-proxy
     volumes:
       - grafana-data:/var/lib/grafana
     configs:
