--- a/apps/jellyfin/docker-compose.yml
+++ b/apps/jellyfin/docker-compose.yml
@@ -1,9 +1,18 @@
 version: '3.8'
 
+networks:
+  lab_default:
+    external: true
+  web-proxy:
+    external: true
+
 services:
 
   jellyfin:
     image: jellyfin/jellyfin:10.11.2
+    networks:
+      - lab_default
+      - web-proxy
     ports:
       - target: 1920  # service discovery and dlna
         published: 1920
@@ -61,6 +70,8 @@ services:
       echo "Starting jellyfin service..."
       docker service scale $$SERVICE_NAME=1 > /dev/null
       '
+    networks:
+      - lab_default
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - jellyfin-config:/opt/config
