--- a/apps/prometheus/docker-compose.yml
+++ b/apps/prometheus/docker-compose.yml
@@ -1,9 +1,18 @@
 version: '3.8'
 
+networks:
+  lab_default:
+    external: true
+  web-proxy:
+    external: true
+
 services:
 
   prometheus:
     image: prom/prometheus:v3.7.3
+    networks:
+      - lab_default
+      - web-proxy
     volumes:
       - prometheus-data:/prometheus
     configs:
