--- a/stacks/infinitude/stack.yaml
+++ b/stacks/infinitude/stack.yaml
@@ -1,8 +1,6 @@
 version: '3.8'
 
 networks:
-  lab_default:
-    external: true
   web-proxy:
     external: true
 
@@ -11,7 +9,6 @@ services:
   infinitude:
     image: nebulous/infinitude:latest@sha256:313d0cdd46a404861cfe9e880b5b5c2610eb39207f6fb299fc9ee9a112e49403
     networks:
-      - lab_default
       - web-proxy
     ports:
       # The thermostat has trouble connecting through the proxy, on both 80 and 443.
@@ -38,10 +35,10 @@ services:
         - traefik.http.routers.infinitude.tls.domains[0].main=*.lab.omglolwtfbbq.com
         - traefik.http.services.infinitude.loadbalancer.server.port=3000
 
-  infinitude-prometheus:
+  prometheus-exporter:
     image: ghcr.io/jeremyhayes/infinitude-prometheus:v0.1.48
     networks:
-      - lab_default
+      - web-proxy
     environment:
       - INFINITUDE_BASE_URL=http://infinitude:3000
     deploy:
