add exporter to proxy network for metrics

--- a/stacks/pihole/stack.yaml
+++ b/stacks/pihole/stack.yaml
@@ -72,6 +72,7 @@ services:
     image: ekofr/pihole-exporter:v1.2.0
     networks:
       - pihole
+      - web-proxy
     environment:
       - PIHOLE_HOSTNAME=192.168.1.51,192.168.1.52,192.168.1.53
       - PIHOLE_PORT=8090
