--- a/stacks/grafana/stack.yaml
+++ b/stacks/grafana/stack.yaml
@@ -1,23 +1,29 @@
 version: '3.8'
 
 networks:
-  lab_default:
-    external: true
+  grafana:
+    driver: overlay
   web-proxy:
     external: true
+
+volumes:
+  grafana-data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /opt/stacks/grafana/grafana/data
 
 services:
 
   grafana:
     image: grafana/grafana:12.2.1
     networks:
-      - lab_default
+      - grafana
       - web-proxy
     volumes:
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
       - grafana-data:/var/lib/grafana
-    configs:
-      - source: grafana-ini
-        target: /etc/grafana/grafana.ini
     deploy:
       placement:
         constraints:
@@ -32,14 +38,8 @@ services:
         - traefik.http.routers.grafana.tls.domains[0].main=*.lab.omglolwtfbbq.com
         - traefik.http.services.grafana.loadbalancer.server.port=3000
 
-configs:
-  grafana-ini:
-    file: ./grafana.ini
-
-volumes:
-  grafana-data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: "/opt/apps/grafana"
+#  alloy:
+#  loki:
+#  mimir:
+#  seaweed:
+#  seaweed-buckets:
