--- a/stacks/grafana/grafana/grafana.ini
+++ b/stacks/grafana/grafana/grafana.ini
@@ -1,2 +1,20 @@
 [server]
-root_url = "https://grafana.lab.omglolwtfbbq.com"
+root_url = https://grafana.lab.omglolwtfbbq.com
+
+[auth]
+signout_redirect_url = https://auth.lab.omglolwtfbbq.com/application/o/grafana/end-session/
+
+[auth.generic_oauth]
+name = Authentik
+enabled = true
+auth_url = https://auth.lab.omglolwtfbbq.com/application/o/authorize/
+token_url = https://auth.lab.omglolwtfbbq.com/application/o/token/
+api_url = https://auth.lab.omglolwtfbbq.com/application/o/userinfo/
+client_id = $__file{/run/secrets/authentik_grafana-client-id}
+client_secret = $__file{/run/secrets/authentik_grafana-client-secret}
+scopes = openid profile email
+allow_sign_up = true
+auto_login = false
+use_pkce = true
+use_refresh_token = true
+login_attribute_path = sub
