--- a/stacks/authentik/stack.yaml
+++ b/stacks/authentik/stack.yaml
@@ -15,6 +15,10 @@ secrets:
     file: ./.secret.grafana-client-id
   grafana-client-secret:
     file: ./.secret.grafana-client-secret
+  synology-client-id:
+    file: ./.secret.synology-client-id
+  synology-client-secret:
+    file: ./.secret.synology-client-secret
 
 volumes:
 #  media:
@@ -105,6 +109,8 @@ services:
       - postgres-password
       - grafana-client-id
       - grafana-client-secret
+      - synology-client-id
+      - synology-client-secret
     environment:
       - AUTHENTIK_SECRET_KEY=file:///run/secrets/secret-key
       - AUTHENTIK_POSTGRESQL__HOST=postgres
