add legacy prometheus/loki to grafana network

--- a/apps/prometheus/docker-compose.yml
+++ b/apps/prometheus/docker-compose.yml
@@ -5,6 +5,8 @@ networks:
     external: true
   web-proxy:
     external: true
+  grafana_grafana:
+    external: true
 
 services:
 
@@ -13,6 +15,7 @@ services:
     networks:
       - lab_default
       - web-proxy
+      - grafana_grafana
     volumes:
       - prometheus-data:/prometheus
     configs:
