--- a/apps/loki/docker-compose.yml
+++ b/apps/loki/docker-compose.yml
@@ -1,10 +1,19 @@
 version: '3.8'
 
+networks:
+  loki:
+    driver: overlay
+  grafana_grafana:
+    external: true
+
 services:
 
   loki:
     image: grafana/loki:3.5.8
     command: "-config.file=/etc/loki/config.yml"
+    networks:
+      - loki
+      - grafana_grafana
     volumes:
       - loki-data:/data/loki
     configs:
@@ -21,6 +30,8 @@ services:
   promtail:
     image: grafana/promtail:3.5.8
     command: "-config.file=/etc/promtail/config.yml"
+    networks:
+      - loki
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     configs:
