add provisioning for alerting

--- a/stacks/grafana/grafana/grafana.ini
+++ b/stacks/grafana/grafana/grafana.ini
@@ -18,3 +18,10 @@ auto_login = false
 use_pkce = true
 use_refresh_token = true
 login_attribute_path = sub
+
+[feature_toggles]
+provisioning = true
+kubernetesDashboards = true
+
+[paths]
+permitted_provisioning_paths = /etc/grafana/provisioning/
