--- a/stacks/grafana/stack.yaml
+++ b/stacks/grafana/stack.yaml
@@ -11,6 +11,8 @@ secrets:
     external: true
   authentik_grafana-client-secret:
     external: true
+  slack-webhook:
+    file: ./.secret.slack-webhook
 
 volumes:
   grafana-data:
@@ -30,8 +32,10 @@ services:
     secrets:
       - authentik_grafana-client-id
       - authentik_grafana-client-secret
+      - slack-webhook
     volumes:
       - ./grafana/grafana.ini:/etc/grafana/grafana.ini
+      - ./grafana/provisioning:/etc/grafana/provisioning
       - grafana-data:/var/lib/grafana
     deploy:
       placement:
