--- a/stacks/grafana/stack.yaml
+++ b/stacks/grafana/stack.yaml
@@ -66,7 +66,35 @@ services:
         - traefik.http.services.grafana.loadbalancer.server.port=3000
 
 #  alloy:
-#  loki:
+
+  loki:
+    image: grafana/loki:3.5.3
+    command:
+      - -config.file=/etc/loki/config.yaml
+    networks:
+      - grafana
+      - web-proxy
+    volumes:
+      - ./loki/config.yaml:/etc/loki/config.yaml
+      # These are currently unused, but necessary for provisioning
+      - ./loki/ruler:/etc/loki/ruler
+    secrets:
+      - seaweed-credentials
+    environment:
+      AWS_SHARED_CREDENTIALS_FILE: /run/secrets/seaweed-credentials
+    deploy:
+      placement:
+        constraints:
+          - node.platform.arch == x86_64
+      labels:
+        - prometheus.swarm.enable=true
+        - prometheus.swarm.port=3100
+        - traefik.enable=true
+        - traefik.http.routers.loki.rule=Host(`loki.lab.omglolwtfbbq.com`)
+        - traefik.http.routers.loki.entrypoints=web-secure
+        - traefik.http.routers.loki.tls.certResolver=primary
+        - traefik.http.routers.loki.tls.domains[0].main=*.lab.omglolwtfbbq.com
+        - traefik.http.services.loki.loadbalancer.server.port=3100
 
   mimir:
     image: grafana/mimir:2.17.0
