add node hostname to metrics/logs

--- a/stacks/grafana/stack.yaml
+++ b/stacks/grafana/stack.yaml
@@ -88,6 +88,7 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /etc/hostname:/etc/hostname:ro
     cap_add:
       - SYS_TIME
     deploy:
