--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,10 @@
 {
   "extends": [
     "config:recommended"
-  ]
+  ],
+  "docker-compose": {
+    "managerFilePatterns": [
+      "/^stack\\.ya?ml$/"
+    ]
+  }
 }
