loki ops ui moved to grafana plugin in 3.6

--- a/stacks/grafana/grafana/grafana.ini
+++ b/stacks/grafana/grafana/grafana.ini
@@ -25,3 +25,6 @@ kubernetesDashboards = true
 
 [paths]
 permitted_provisioning_paths = /etc/grafana/provisioning/
+
+[plugins]
+preinstall = grafana-lokioperational-app
