--- a/stacks/jellyfin/stack.yaml
+++ b/stacks/jellyfin/stack.yaml
@@ -66,8 +66,8 @@ services:
       echo "Backing up jellyfin config to '$$OUTFILE'..."
       tar -cpzf "$$OUTFILE" -C /opt/config .
 
-      echo "Deleting backups older than 20 days..."
-      find /opt/backups -name "config_*.tar.gz" -type f -mtime +20 -print -delete
+      echo "Deleting backups older than 30 days..."
+      find /opt/backups -name "config_*.tar.gz" -type f -mtime +30 -print -delete
 
       echo "Starting jellyfin service..."
       docker service scale $$SERVICE_NAME=1 > /dev/null
@@ -77,7 +77,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - jellyfin-config:/opt/config
-      - jellyfin-backups:/opt/backups
+      - jellyfin-backup:/opt/backups
     environment:
       - SERVICE_NAME=jellyfin_jellyfin
     deploy:
@@ -105,12 +105,12 @@ volumes:
       type: 'none'
       o: 'bind'
       device: '/opt/stacks/jellyfin/jellyfin/cache'
-  jellyfin-backups:
+  jellyfin-backup:
     driver: local
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/opt/stacks/jellyfin/backups'
+      device: '/mnt/nas/docker/jellyfin/backup'
   jellyfin-media:
     driver: local
     driver_opts:
